...
            modifier = Modifier.padding(top = 24.dp),
            horizontalAlignment = Alignment.CenterHorizontally,
            verticalArrangement = Arrangement.spacedBy(8.dp),
        ) {
          CircleButton(
              onClick = { shareCapture(context, preview) },
              modifier = Modifier.size(64.dp).testTag("share_button"),
          ) {
            Icon(
                imageVector = Icons.Filled.Share,
                contentDescription = stringResource(R.string.share),
                tint = Color.Black,
            )
...
      CircleButton(
          onClick = onDismiss,
          modifier =
              Modifier.align(Alignment.TopEnd)
                  .padding(20.dp)
                  .size(44.dp)
                  .testTag("close_preview_button"),
      ) {
        Icon(
            imageVector = Icons.Filled.Close,
            contentDescription = stringResource(R.string.close_preview),
            tint = Color.Black,
        )
...
